--- a/src/components/CaseStudy1.astro
+++ b/src/components/CaseStudy1.astro
@@ -1,11 +1,26 @@
 ---
 import { Image } from "astro:assets";
 import case2 from "../assets/case2.avif";
+import Button from "./Button.astro";
 ---
 
 <section class="container">
-  <div class="billede">
-    <Image alt="" src={case2} />
+  <Image alt="" src={case2} />
+  <div class="kasse">
+    <div>
+      <h6>Case Name</h6>
+      <p>Taxes & Efficiency</p>
+    </div>
+    <div>
+      <h6>Category</h6>
+      <p>Business</p>
+    </div>
+    <div>
+      <h6>Date</h6>
+      <p>27th September 2022</p>
+    </div>
+
+    <Button style="secondary">Live Preview</Button>
   </div>
 </section>
 <style>
@@ -26,9 +41,21 @@ import case2 from "../assets/case2.avif";
         grid-column: 2;
       }
 
-      .billede {
-        display: grid;
-        grid-template-columns: subgrid;
+      img {
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+      }
+      .kasse {
+        display: flex;
+        justify-content: space-between;
+        background: var(--color-primary3);
+        color: var(--color-secondary2);
+        border-radius: 30px;
+        padding: 53px 60px;
+
+        grid-column: 2 / -2;
+        grid-row: 2 / 4;
+        gap: 20px;
       }
     }
   }
