--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -7,7 +7,7 @@ import Button from "./Button.astro";
 import Card from "./Card.astro";
 ---
 
-<section class="hero-section">
+<section class="container">
   <div class="tekst-knap">
     <div>
       <h1>Adam Buschemia Business Consultant</h1>
@@ -25,7 +25,7 @@ import Card from "./Card.astro";
 
 <style>
   @layer components {
-    .hero-section {
+    .container {
       grid-column: full;
       display: grid;
       grid-template-columns: [full-start] 1fr [content] minmax(0, 600px) minmax(0, 600px) 1fr [full-end];
