--- a/src/pages/casestudy.astro
+++ b/src/pages/casestudy.astro
@@ -3,6 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 import HeroBackground from "../components/HeroBackground.astro";
 
 import CaseStudy1 from "../components/CaseStudy1.astro";
+import CaseStudy2 from "../components/CaseStudy2.astro";
 
 import about1 from "../assets/about1.avif";
 ---
@@ -11,37 +12,9 @@ import about1 from "../assets/about1.avif";
   <HeroBackground surface="case" tag="CASE STUDIES SINGLE" headline="Taxes & Efficiency" />
 
   <CaseStudy1 />
-  <!-- <section>
-    <article>
-      <Image alt="" src={about1} />
-      <h3>Project Overview</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
-
-      <ul>
-        <li>It brings the right people together with all the right information and tools to get work done</li>
-        <li>It brings the right people together with all the right information and tools to get work done</li>
-        <li>It brings the right people together with all the right information and tools to get work done</li>
-        <li>It brings the right people together with all the right information and tools to get work done</li>
-      </ul>
-
-      <h5>Storyboard</h5>
-      <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service. Objectively innovate empowered manufactured products whereas parallel platforms. Holistically predominate extensible testing procedures for reliable supply chains.</p>
-      <p>Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products completely pursue scalable customer service.</p>
-
-      <Image alt="" src={case2} />
-
-      <h5>Project result</h5>
-      <p>Completely synergize resource taxing relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service. Objectively innovate empowered manufactured products whereas parallel platforms. Holistically predominate extensible testing procedures for reliable supply chains.</p>
-      <p>Proactively envisioned multimedia based expertise and cross-media growth strategies. Seamlessly visualize quality intellectual capital without superior collaboration and idea-sharing. Holistically pontificate installed base portals after maintainable products completely pursue scalable customer service.</p>
-    </article>
-  </section> -->
+  <CaseStudy2 />
 </MainLayout>
 
-<style>
-  article {
-    color: var(--color-primary3);
-    margin: 0;
-  }
-</style>
+<style></style>
 
 <script></script>
